<resources>
    <string name="app_name">MyCard</string>
    <string name="my_name">Shadat Tonmoy</string>
    <string name="my_designation">Software Engineer</string>
    <string name="my_phone_no">+8801965036172</string>
    <string name="my_phone_no_data">tel:+8801965036172</string>
    <string name="my_email">shadat.tonmoy@gmail.com</string>
    <string name="my_email_data">mailto:shadat.tonmoy@gmail.com</string>
    <string name="my_github">github.com/Shadat-tonmoy</string>
    <string name="my_github_data">https://github.com/Shadat-tonmoy</string>
</resources>
