<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/triple_margin_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/image_dimension"
            android:layout_height="@dimen/image_dimension"
            android:src="@drawable/me"
            android:layout_gravity="center"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/my_name"
            android:textAlignment="center"
            android:textSize="@dimen/large_text_size"
            android:letterSpacing="0.1"
            android:fontFamily="@font/pacifico_regular"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/designation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_designation"
            android:textAlignment="center"
            android:padding="@dimen/default_margin_padding"
            android:textSize="@dimen/normal_text_size"
            android:letterSpacing="0.25"
            android:textColor="@android:color/white"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/phone_no_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin_padding"
            app:cardElevation="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_phone_no"
                android:gravity="center"
                android:textAlignment="textStart"
                android:drawableStart="@drawable/phone_white"
                android:drawablePadding="@dimen/default_margin_padding"
                android:padding="@dimen/double_margin_padding"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/colorPrimaryDark"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/email_id_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin_padding"
            app:cardElevation="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_email"
                android:gravity="center"
                android:textAlignment="textStart"
                android:drawableStart="@drawable/email_white"
                android:drawablePadding="@dimen/default_margin_padding"
                android:padding="@dimen/double_margin_padding"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/colorPrimaryDark"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/github_id_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin_padding"
            android:layout_marginBottom="@dimen/double_margin_padding"
            app:cardElevation="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_github"
                android:gravity="center"
                android:textAlignment="textStart"
                android:drawableStart="@drawable/github"
                android:drawablePadding="@dimen/default_margin_padding"
                android:padding="@dimen/double_margin_padding"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/colorPrimaryDark"/>

        </androidx.cardview.widget.CardView>


    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>